# AutoOSINT

./: .gitignore  README.md  ROADMAP.md  cli.py  debug_utils.py  pyproject.toml  requirements.txt  setup.bat
core/: correlator.py  engine.py  formatter.py  models.py
docs/: roadmap.md
modules/domain/: dns_recon.py
modules/email/: breach_check.py
modules/phone/: carrier_lookup.py
modules/username/: social_scan.py
tests/: test_modules.py  test_utils.py  test_validators.py
utils/: http_client.py  validators.py
