[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoosint"
version = "0.1.0"
description = "A professional OSINT investigation tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer[all]",
    "pydantic",
    "rich",
    "requests",
    "dnspython",
    "phonenumbers",
    "python-dotenv",
]

[project.scripts]
autoosint = "cli:app"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modules*", "utils*"]
exclude = ["tests*", "output*"]
